--- a/JKConnectedApp/app/src/main/res/values/strings.xml
+++ b/JKConnectedApp/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="Region">Region</string>
-    <string name="Server">Server</string>
+    <string name="Server">Realm</string>
     <string name="GuildName">Guild Name</string>
 
     <string name="RegionHint">us</string>
